--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,21 @@
 body {
 	background-color: grey;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	width: 100vw;
 }
 .dp {
-	background-color: red;
+	background-color: #0F1F2E;
+	margin: 0 auto;
+	padding: 10px 20px;
+	height: 90vh;
+	width: 90vw;
+}
+#dvContain {
+	margin: 0;
+	padding: 10px;
+	display: unset;
+	height: 100vh;
+	width: 100vw;
 }
