--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,20 +1,29 @@
+/**/
 body {
-	background-color: grey;
+	background-image: url("../assets/space.jpg");
+    background-size: 1920px 1078px;
+	background-repeat: no-repeat;
 	margin: 0;
 	padding: 0;
 	height: 100vh;
 	width: 100vw;
 }
+/*CLASS*/
 .dp {
-	background-color: #0F1F2E;
-	margin: 0 auto;
-	padding: 10px 20px;
-	height: 90vh;
-	width: 90vw;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+	height: 100vh;
+	width: 3vw;
+	text-align: center;
 }
+.fsBtn {
+	margin:2px 0;
+}
+/*ID*/
 #dvContain {
 	margin: 0;
-	padding: 10px;
+	padding: 0;
 	display: unset;
 	height: 100vh;
 	width: 100vw;
